# bookstore

./: .env.dev  .project  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  exit  pyproject.toml  requirements.txt
.dbeaver/: .credentials-config.json.bak  .data-sources.json.bak  credentials-config.json  data-sources.json  project-settings.json
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  wsgi.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  product_viewset.py
